WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241924
Ignore history items added by JS without user interaction via fragment navigation when navigation back/forward via the WKWebView API
https://bugs.webkit.org/show_bug.cgi?id=241924
Summary
Ignore history items added by JS without user interaction via fragment naviga...
Chris Dumez
Reported
2022-06-23 11:48:08 PDT
Ignore history items added by JS without user interaction via fragment navigation when navigation back/forward via the WKWebView API.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2022-06-23 11:48:18 PDT
<
rdar://95790598
>
Chris Dumez
Comment 2
2022-06-23 11:52:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1734
EWS
Comment 3
2022-06-27 20:33:00 PDT
Committed
251900@main
(2c5890a4f836): <
https://commits.webkit.org/251900@main
> Reviewed commits have been landed. Closing PR #1734 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug