Ignore history items added by JS without user interaction via fragment navigation when navigation back/forward via the WKWebView API https://bugs.webkit.org/show_bug.cgi?id=241924 <rdar://95790598>

Reviewed by Geoffrey Garen.

This is a follow-up to 251783@main to set the wasCreatedByJSWithoutUserInteraction
flag on the HistoryItem when doing a fragment navigation without user gesture.
251783@main only did so for HistoryItems added via history.pushState() in JS. It is
however easy to achieve the same thing using fragment navigations.

* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::continueFragmentScrollAfterNavigationPolicy):
* Tools/TestWebKitAPI/Tests/WebKit/WKBackForwardList.mm:
(TEST):

Canonical link: https://commits.webkit.org/251900@main